# packages/backend/src/controllers/categoriaController.js
@@ -1,0 +1,15 @@
+
+
+export class CategoriaController {
+    constructor(categoriaService) {
+        this.categoriaService = categoriaService;
+    }
+
+    async buscarTodos(_req, res) {
+        const categorias = await this.categoriaService.buscarTodos();
+        if (!categorias) {
+            return res.status(204).send();
+        }
+        res.status(200).json(categorias);
+    }
+}
